--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
@@ -83,7 +83,7 @@
                 <li>are able to get to the apprenticeship location easily</li>
             </ul>
         </div>
-        @Html.FormCheckBoxFor(m => m.AcceptSubmit, labelHtmlAttributes: new {@class = "block-label para-btm-margin"})
+        @Html.FormCheckBoxFor(m => m.AcceptSubmit, labelHtmlAttributes: new {@class = "block-label selection-button-checkbox para-btm-margin" })
     </div>
 
     <div class="form-group hide-print">
