--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
@@ -108,11 +108,11 @@
             are grades your teacher expects you to get.
         </p>
         <div class="form-group form-group-compound inline clearfix">
-            <label data-target="qualifications-panel" for="qualifications-yes" class="block-label">
+            <label data-target="qualifications-panel" for="qualifications-yes" class="block-label selection-button-radio">
                 <input checked aria-controls="qualifications-panel" aria-expanded="false" name="quals"
                        type="radio" id="qualifications-yes">Yes
             </label>
-            <label for="qualifications-no" class="block-label">
+            <label for="qualifications-no" class="block-label selection-button-radio">
                 <input name="quals" type="radio" id="qualifications-no">No
             </label>
         </div>
@@ -208,10 +208,10 @@
     </p>
     <div class="hide-nojs">
         <div class="form-group inline clearfix">
-            <label data-target="workexperience-panel" for="workexp-yes" class="block-label">
+            <label data-target="workexperience-panel" for="workexp-yes" class="block-label selection-button-radio">
                 <input checked name="workexp" type="radio" id="workexp-yes">Yes
             </label>
-            <label for="workexp-no" class="block-label">
+            <label for="workexp-no" class="block-label selection-button-radio">
                 <input name="workexp" type="radio" id="workexp-no">No
             </label>
         </div>
@@ -308,10 +308,10 @@
     </p>
     <div class="hide-nojs">
         <div class="form-group inline clearfix">
-            <label data-target="training-panel" for="training-yes" class="block-label">
+            <label data-target="training-panel" for="training-yes" class="block-label selection-button-radio">
                 <input  name="training" type="radio" id="training-yes">Yes
             </label>
-            <label for="training-no" class="block-label">
+            <label for="training-no" class="block-label selection-button-radio">
                 <input checked name="training" type="radio" id="training-no">No
             </label>
         </div>
@@ -450,13 +450,13 @@
     </div>
     <div class="form-group inline clearfix">
         <p class="form-label-bold" id="disability-label">Do you have a learning difficulty, disability or health problem?</p>
-        <label for="disability-yes" class="block-label">
+        <label for="disability-yes" class="block-label selection-button-radio">
             <input name="disability" type="radio" id="disability-yes" aria-labelledby="disability-label">Yes
         </label>
-        <label for="disability-no" class="block-label">
+        <label for="disability-no" class="block-label selection-button-radio">
             <input name="disability" type="radio" id="disability-no" aria-labelledby="disability-label">No
         </label>
-        <label for="disability-prefno" class="block-label">
+        <label for="disability-prefno" class="block-label selection-button-radio">
             <input name="disability" type="radio" id="disability-prefno" aria-labelledby="disability-label">Prefer not to say
         </label>
         <div class="text">
@@ -480,11 +480,11 @@
         <label for="question4" class="form-label-bold">Is there anything we can do to support your interview?</label>
         <span class="form-hint">For example, do you need a signer or information in braille</span>
         <div class="form-group form-group-compound inline">
-            <label data-target="support-panel" for="support-yes" class="block-label">
+            <label data-target="support-panel" for="support-yes" class="block-label selection-button-radio">
                 <input name="support" type="radio" id="support-yes" aria-controls="support-panel"
                         aria-expanded="false">Yes
             </label>
-            <label for="support-no" class="block-label">
+            <label for="support-no" class="block-label selection-button-radio">
                 <input checked name="support" type="radio" id="support-no">No
             </label>
         </div>
