--- a/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
@@ -82,7 +82,7 @@
                         </div>
                         <p class="heading-medium">How would you like to assign this candidate's application?</p>
                         <p>
-                            <label for="application-status-submitted" class="block-label">
+                            <label for="application-status-submitted" class="block-label selection-button-radio">
                                 @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Submitted, new { id = "application-status-submitted" })
                                 New @if (Model.Status == ApplicationStatuses.Submitted)
                                 {
@@ -90,7 +90,7 @@
                                 }
                             </label>
                             <br />
-                            <label for="application-status-inprogress" class="block-label">
+                            <label for="application-status-inprogress" class="block-label selection-button-radio">
                                 @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.InProgress, new { id = "application-status-inprogress" })
                                 In progress @if (Model.Status == ApplicationStatuses.InProgress)
                                 {
