--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/Index.cshtml
@@ -56,10 +56,10 @@
     </fieldset>
     
     <div class="form-group">
-        @Html.FormUnvalidatedCheckBoxFor(m => m.AcceptUpdates, labelHtmlAttributes: new { @class = "block-label" })
+        @Html.FormUnvalidatedCheckBoxFor(m => m.AcceptUpdates, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
     </div>
 
-    @Html.FormCheckBoxFor(m => m.HasAcceptedTermsAndConditions, labelHtmlAttributes: new { @class = "block-label" })
+    @Html.FormCheckBoxFor(m => m.HasAcceptedTermsAndConditions, labelHtmlAttributes: new { @class = "block-label selection-button-checkbox" })
 
     <div class="form-group">
         <button id="create-account-btn" class="button">Create account</button>
