--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_disability.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/EditorTemplates/MonitoringInformation/_disability.cshtml
@@ -2,13 +2,13 @@
 
 <div class="form-group inline clearfix">
     <p class="form-label-bold" id="disability-label">Do you have a learning difficulty, disability or health problem?</p>
-    <label for="disability-yes" class="block-label">
+    <label for="disability-yes" class="block-label selection-button-radio">
         @Html.RadioButtonFor(m => m.DisabilityStatus, 1, new { id = "disability-yes", aria_labelledby = "disability-label" }) Yes
     </label>
-    <label for="disability-no" class="block-label">
+    <label for="disability-no" class="block-label selection-button-radio">
         @Html.RadioButtonFor(m => m.DisabilityStatus, 2, new { id = "disability-no", aria_labelledby = "disability-label" }) No
     </label>
-    <label for="disability-prefer-not-to-say" class="block-label">
+    <label for="disability-prefer-not-to-say" class="block-label selection-button-radio">
         @Html.RadioButtonFor(m => m.DisabilityStatus, 3, new { id = "disability-prefer-not-to-say", aria_labelledby = "disability-label" }) Prefer not to say
     </label>
     <div class="text">
@@ -33,10 +33,10 @@
     <label for="question4" class="form-label-bold">Is there anything we can do to support your interview?</label>
     <span class="form-hint">For example, do you need a signer or information in braille</span>
     <div class="form-group form-group-compound inline hide-nojs">
-        <label data-target="support-panel" for="disability-support-yes" class="block-label">
+        <label data-target="support-panel" for="disability-support-yes" class="block-label selection-button-radio">
             @Html.RadioButtonFor(m => m.RequiresSupportForInterview, true, new { id = "disability-support-yes", aria_controls = "support-panel", aria_expanded = "false" }) Yes
         </label>
-        <label for="disability-support-no" class="block-label hide-nojs">
+        <label for="disability-support-no" class="block-label selection-button-radio hide-nojs">
             @Html.RadioButtonFor(m => m.RequiresSupportForInterview, false, new { id = "disability-support-no" }) No
         </label>
     </div>
