--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/FurtherVacancyDetails.cshtml
@@ -72,17 +72,17 @@
                     <label class="form-label-bold" for="weekly-wage">Wage</label>
                     <div class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.Wage.Type)))" data-editable-x="">
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label for="national-minimum-wage" class="block-label vertically-stacked">
+                        <label for="national-minimum-wage" class="block-label selection-button-radio vertically-stacked">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.NationalMinimum, new { id = "national-minimum-wage", aria_controls = "wage-type-panel" })
                             National Minimum Wage
                         </label>
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label for="apprenticeship-minimum-wage" class="block-label vertically-stacked">
+                        <label for="apprenticeship-minimum-wage" class="block-label selection-button-radio vertically-stacked">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.ApprenticeshipMinimum, new { id = "apprenticeship-minimum-wage", aria_controls = "wage-type-panel" })
                             National Minimum Wage for apprentices
                         </label>
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label for="custom-wage" class="block-label vertically-stacked" data-target="custom-wage-panel">
+                        <label for="custom-wage" class="block-label selection-button-radio vertically-stacked" data-target="custom-wage-panel">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.Custom, new { id = "custom-wage", aria_controls = "wage-type-panel" })
                             Custom wage
                         </label>
@@ -91,12 +91,12 @@
                                 <fieldset class="form-group inline-fixed">
                                     @* ReSharper disable once Html.IdNotResolved *@
                                     <span class="clearfix">Select type</span>
-                                    <label for="custom-wage-fixed" class="block-label" data-target="custom-wage-fixed-panel">
+                                    <label for="custom-wage-fixed" class="block-label selection-button-radio" data-target="custom-wage-fixed-panel">
                                         @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Fixed, new { id = "custom-wage-fixed", aria_controls = "custom-wage-panel" })
                                         Fixed wage
                                     </label>
                                     @* ReSharper disable once Html.IdNotResolved *@
-                                    <label for="custom-wage-range" class="block-label" data-target="custom-wage-range-panel">
+                                    <label for="custom-wage-range" class="block-label selection-button-radio" data-target="custom-wage-range-panel">
                                         @Html.RadioButtonFor(model => model.Wage.CustomType, CustomWageType.Ranged, new { id = "custom-wage-range", aria_controls = "custom-wage-panel" })
                                         Wage range
                                     </label>
@@ -125,7 +125,7 @@
                         </div>
                         <p style="clear: both;">or</p>
                         @* ReSharper disable once Html.IdNotResolved *@
-                        <label for="preset-text" class="block-label vertically-stacked" data-target="preset-text-panel">
+                        <label for="preset-text" class="block-label selection-button-radio vertically-stacked" data-target="preset-text-panel">
                             @Html.RadioButtonFor(model => model.Wage.Classification, WageClassification.PresetText, new { id = "preset-text", aria_controls = "wage-type-panel" })
                             Choose a text description of the wage
                         </label>
