--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/AddEmployer.cshtml
@@ -16,10 +16,10 @@
             @Html.Partial("ValidationSummary", ViewData.ModelState)
             <div class="form-group inline clearfix blocklabel-single hide-nojs">
                 <p>Search using</p>
-                <label data-target="namesearch-panel" for="namesearch" class="block-label">
+                <label data-target="namesearch-panel" for="namesearch" class="block-label selection-button-radio">
                     <input checked name="@Html.NameFor(m => m.FilterType)" value="NameAndLocation" type="radio" id="namesearch">Name and location
                 </label>
-                <label data-target="edsErnsearch-panel" for="ernsearch" class="block-label">
+                <label data-target="edsErnsearch-panel" for="ernsearch" class="block-label selection-button-radio">
                     <input aria-controls="edsErnsearch-panel" name="@Html.NameFor(m => m.FilterType)" value="EdsUrn" type="radio" id="ernsearch">ERN
                 </label>
             </div>
