Updated main content tag to support JS scripts

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
         </div>
         
-        <main id="content">
+        <main id="main">
             @{
                 var controller = ViewContext.Controller as CandidateControllerBase;
 
