--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/BasicVacancyDetails.cshtml
@@ -6,11 +6,9 @@
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Select framework and level";
-
     const string selected = "selected";
-
-    var isApplicationThroughRAAYes = (Model.OfflineVacancy.HasValue && !Model.OfflineVacancy.Value) ? selected : null;
-    var isApplicationThroughRAANo = (Model.OfflineVacancy.HasValue && Model.OfflineVacancy.Value) ? selected : null;
+    var isApplicationThroughRAAYes = Model.OfflineVacancy.HasValue && !Model.OfflineVacancy.Value ? selected : null;
+    var isApplicationThroughRAANo = Model.OfflineVacancy.HasValue && Model.OfflineVacancy.Value ? selected : null;
 
     <h1 class="heading-xlarge">
         Enter basic vacancy details
@@ -22,6 +20,12 @@
     @Html.HiddenFor(m => m.NumberOfPositions)
     @Html.HiddenFor(m => m.ComeFromPreview)
     @Html.HiddenFor(m => m.VacancySource)
+    @Html.HiddenFor(model => model.VacancyReferenceNumber)
+    @Html.HiddenFor(model => model.Ukprn)
+    @Html.HiddenFor(model => model.VacancyOwnerRelationship.VacancyOwnerRelationshipId)
+    @Html.HiddenFor(model => model.VacancyGuid)
+    @Html.HiddenFor(model => model.Status)
+
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.FormTextAreaFor(m => m.Title, controlHtmlAttributes: new {type = "text", size = 12, @class = "form-control-3-4 beepboop form-textarea-small"})
@@ -37,11 +41,11 @@
         <label class="form-label-bold">Vacancy type</label>
         @* ReSharper disable once Html.IdNotResolved *@
         <label for="vacancy-type-apprenticeship" class="block-label selection-button-radio">
-            @Html.RadioButtonFor(model => model.VacancyType, VacancyType.Apprenticeship, new { id = "vacancy-type-apprenticeship", aria_labelledby = "vacancy-type-label" }) Apprenticeship
+            @Html.RadioButtonFor(model => model.VacancyType, VacancyType.Apprenticeship, new {id = "vacancy-type-apprenticeship", aria_labelledby = "vacancy-type-label"}) Apprenticeship
         </label>
         @* ReSharper disable once Html.IdNotResolved *@
         <label for="vacancy-type-traineeship" class="block-label selection-button-radio">
-            @Html.RadioButtonFor(model => model.VacancyType, VacancyType.Traineeship, new { id = "vacancy-type-traineeship", aria_labelledby = "vacancy-type-label" }) Traineeship
+            @Html.RadioButtonFor(model => model.VacancyType, VacancyType.Traineeship, new {id = "vacancy-type-traineeship", aria_labelledby = "vacancy-type-label"}) Traineeship
         </label>
         @Html.ValidationMessageFor(m => m.VacancyType)
     </div>
@@ -73,12 +77,13 @@
                         var offlineMultiUrlParaStyle = hideOfflineLinks || Model.OfflineVacancyType == OfflineVacancyType.MultiUrl ? "display: none;" : null;
                         var offlineSingleUrlParaStyle = hideOfflineLinks || Model.OfflineVacancyType != OfflineVacancyType.MultiUrl ? "display: none;" : null;
                         var offlineMultiUrlDivStyle = Model.OfflineVacancyType == OfflineVacancyType.MultiUrl ? null : "display: none;";
-                        var offlineSingleUrlDivStyle = hideOfflineLinks || Model.OfflineVacancyType != OfflineVacancyType.MultiUrl ? null: "display: none;";
+                        var offlineSingleUrlDivStyle = hideOfflineLinks || Model.OfflineVacancyType != OfflineVacancyType.MultiUrl ? null : "display: none;";
                     }
 
                     <div id="multiple-offline-application-urls-div" style="@offlineMultiUrlDivStyle">
                         @Html.LabelFor(m => m.OfflineApplicationUrl)
-                        <p id="single-offline-application-url-para" class="inline-text" style="@offlineSingleUrlParaStyle">Alternatively, <button id="single-offline-application-url-button" type="submit" class="button-link no-autosave no-validation" name="@ViewData["OfflineUrlButtonName"]" value="SingleOfflineApplicationUrl">@NewVacancyViewModelMessages.SingleOfflineUrlButtonText</button></p>
+                        <p id="single-offline-application-url-para" class="inline-text" style="@offlineSingleUrlParaStyle">Alternatively, <button id="single-offline-application-url-button" type="submit" class="button-link no-autosave no-validation" name="@ViewData["OfflineUrlButtonName"]" value="SingleOfflineApplicationUrl">@NewVacancyViewModelMessages.SingleOfflineUrlButtonText</button>
+                        </p>
                         <table id="multiple-offline-application-urls-table">
                             <colgroup>
                                 <col class="t30">
@@ -86,49 +91,50 @@
                                 <col class="t50">
                             </colgroup>
                             <thead>
-                                <tr>
-                                    <th>Location</th>
-                                    <th>Number of positions</th>
-                                    <th></th>
-                                </tr>
+                            <tr>
+                                <th>Location</th>
+                                <th>Number of positions</th>
+                                <th></th>
+                            </tr>
                             </thead>
                             <tbody id="location-addresses">
-                                @if (Model.LocationAddresses != null)
+                            @if (Model.LocationAddresses != null)
+                            {
+                                for (var i = 0; i < Model.LocationAddresses.Count; i++)
                                 {
-                                    for (var i = 0; i < Model.LocationAddresses.Count; i++)
-                                    {
-                                        var locationAddress = Model.LocationAddresses[i];
-                                        <tr>
-                                            <td class="location-address">
-                                                @locationAddress.Address.AddressLine1
-                                                @if (!string.IsNullOrWhiteSpace(@locationAddress.Address.AddressLine2))
-                                                {
-                                                    <br />
-                                                    @locationAddress.Address.AddressLine2
-                                                }
-                                                <br />@locationAddress.Address.AddressLine4 @locationAddress.Address.Postcode
-                                            </td>
-                                            <td class="location-positions">
-                                                @locationAddress.NumberOfPositions
-                                            </td>
-                                            <td class="location-offline-urls">
-                                                <div class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType("LocationAddresses[" + i + "].OfflineApplicationUrl")))" style="margin-bottom: 0">
-                                                    @Html.Hidden("LocationAddresses[" + i + "].VacancyLocationId", locationAddress.VacancyLocationId)
-                                                    @Html.Hidden("LocationAddresses[" + i + "].NumberOfPositions", locationAddress.NumberOfPositions)
-                                                    @Html.TextBoxFor(m => Model.LocationAddresses[i].OfflineApplicationUrl, new { @id = "locationaddresses_" + i + "__offlineapplicationurl", @class = "form-control-3-4 beepboop form-control", type = "text", size = 12 })
-                                                    @Html.ValidationMessage("LocationAddresses[" + i + "].OfflineApplicationUrl")
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    }
+                                    var locationAddress = Model.LocationAddresses[i];
+                                    <tr>
+                                        <td class="location-address">
+                                            @locationAddress.Address.AddressLine1
+                                            @if (!string.IsNullOrWhiteSpace(locationAddress.Address.AddressLine2))
+                                            {
+                                                <br/>
+                                                @locationAddress.Address.AddressLine2
+                                            }
+                                            <br/>@locationAddress.Address.AddressLine4 @locationAddress.Address.Postcode
+                                        </td>
+                                        <td class="location-positions">
+                                            @locationAddress.NumberOfPositions
+                                        </td>
+                                        <td class="location-offline-urls">
+                                            <div class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType("LocationAddresses[" + i + "].OfflineApplicationUrl")))" style="margin-bottom: 0">
+                                                @Html.Hidden("LocationAddresses[" + i + "].VacancyLocationId", locationAddress.VacancyLocationId)
+                                                @Html.Hidden("LocationAddresses[" + i + "].NumberOfPositions", locationAddress.NumberOfPositions)
+                                                @Html.TextBoxFor(m => Model.LocationAddresses[i].OfflineApplicationUrl, new {@id = "locationaddresses_" + i + "__offlineapplicationurl", @class = "form-control-3-4 beepboop form-control", type = "text", size = 12})
+                                                @Html.ValidationMessage("LocationAddresses[" + i + "].OfflineApplicationUrl")
+                                            </div>
+                                        </td>
+                                    </tr>
                                 }
+                            }
                             </tbody>
                         </table>
                     </div>
 
                     <div id="single-offline-application-url-div" style="@offlineSingleUrlDivStyle" class="form-group @(SFA.Apprenticeships.Web.Common.Framework.HtmlExtensions.GetValidationCssClass(Html.GetValidationType(m => m.OfflineApplicationUrl)))">
                         @Html.LabelFor(m => m.OfflineApplicationUrl)
-                        <p id="multiple-offline-application-urls-para" class="inline-text" style="@offlineMultiUrlParaStyle">Alternatively, you can <button id="multiple-offline-application-urls-button" type="submit" class="button-link no-autosave no-validation" name="@ViewData["OfflineUrlButtonName"]" value="MultipleOfflineApplicationUrls">@NewVacancyViewModelMessages.MultiOfflineUrlsButtonText</button></p>
+                        <p id="multiple-offline-application-urls-para" class="inline-text" style="@offlineMultiUrlParaStyle">Alternatively, you can <button id="multiple-offline-application-urls-button" type="submit" class="button-link no-autosave no-validation" name="@ViewData["OfflineUrlButtonName"]" value="MultipleOfflineApplicationUrls">@NewVacancyViewModelMessages.MultiOfflineUrlsButtonText</button>
+                        </p>
                         @Html.TextBoxFor(m => m.OfflineApplicationUrl, new {@class = "form-control-3-4 beepboop form-control", type = "text", size = 12, id = "apprenticeship-offline-application-url"})
                         @Html.ValidationMessageFor(m => m.OfflineApplicationUrl)
                     </div>
@@ -145,11 +151,5 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    @Html.HiddenFor(model => model.VacancyReferenceNumber)
-    @Html.HiddenFor(model => model.Ukprn)
-    @Html.HiddenFor(model => model.VacancyOwnerRelationship.VacancyOwnerRelationshipId)
-    @Html.HiddenFor(model => model.VacancyGuid)
-    @Html.HiddenFor(model => model.Status)
+    </div>    
 }
